overflow fixed

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -11,7 +11,7 @@ footer {
 
    font-size: 20px;
    color: $lil;
-
+   overflow: hidden;
 
 
    ul {
