--- a/src/components/homeScreen/homeScreeen.scss
+++ b/src/components/homeScreen/homeScreeen.scss
@@ -8,7 +8,10 @@
    position: relative;
 
    .order-button {
+      position: absolute;
       margin: 0 auto;
+      left: 50%;
+      transform: translateX(-50%);
       top: 79%;
 
    }
